stages/stage2/gatewayapi/httproute.yaml
# httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: portal
  namespace: apollo11
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: default
  hostnames:
    - "portal-gatewayapi.localhost"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: portal
          port: 80
